feat: user slug and community slug
